--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">TimeSchedule</string>
     <string name="action_settings">Settings</string>
     <string name="str_import_urgent">Import, Urgent</string>
@@ -8,4 +7,5 @@
     <string name="str_not_import_urgent">Not Import, Urgent</string>
     <string name="str_not_import_not_urgent">Not Import, Not Urgent</string>
     <string name="str_note">Note</string>
+    <string name="str_save">Save</string>
 </resources>
