--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -9,4 +9,5 @@
     <string name="str_note">备注</string>
     <string name="str_save">保存</string>
     <string name="str_today">今日安排</string>
+    <string name="str_plz_title">请输入标题</string>
 </resources>
