--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="str_note">Note</string>
     <string name="str_save">Save</string>
     <string name="str_today">Today Task</string>
+    <string name="str_plz_title">Please input title</string>
 </resources>
