--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="str_min">Min</string>
     <string name="str_start_time">Start Time:</string>
     <string name="str_end_time">End Time:</string>
+    <string name="str_self_profile">Settings</string>
+    <string name="str_tucao">Tu Cao:</string>
+    <string name="str_submit">Submit</string>
 </resources>
