--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">时间管理</string>
+    <string name="app_name">点滴时间</string>
     <string name="action_settings">设置</string>
     <string name="str_import_urgent">重要，紧急</string>
     <string name="str_import_not_urgent">重要，不紧急</string>
