[bugfix]删除集成进去的微信社交分享,避免百度审核不通过;引导页最后一页,加入点击进入按钮.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="str_self_profile">Settings</string>
     <string name="str_tucao">Tu Cao:</string>
     <string name="str_submit">Submit</string>
+    <string name="str_enter_now">Enter Now</string>
 </resources>
