--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -20,4 +20,5 @@
     <string name="str_self_profile">个人中心</string>
     <string name="str_tucao">吐槽:</string>
     <string name="str_submit">提交</string>
+    <string name="str_enter_now">立即进入</string>
 </resources>
